--- a/Lesson2/Vagrantfile
+++ b/Lesson2/Vagrantfile
@@ -1,45 +1,105 @@
 Vagrant.configure("2") do |config|
- config.vm.define "centos" do |subconfig|    
-  subconfig.vm.box = "centos/7"
-  subconfig.vm.hostname="centos"    
-  subconfig.vm.network :private_network, ip: "192.168.55.11"    
-  subconfig.vm.provider "virtualbox" do |vb|      
-    vb.memory = "256"      
-    vb.cpus = "1"    
-    unless File.exist?('./sata1.vdi')
-      vb.customize ['createhd', '--filename', './sata1.vdi', '--size', 500 * 1024]
-    end  
-    vb.customize ["storagectl", :id, "--name", "SATA", "--add", "sata" ]
-    vb.customize ['storageattach', :id, '--storagectl', 'SATA', '--port', 1, '--device', 0, '--type', 'hdd', '--medium',  './sata1.vdi']
-  end
-  subconfig.vm.provision "shell", inline: <<-SHELL
-              useradd otus
-              useradd otus2
-              useradd otus3
-              cp -r /home/vagrant/.ssh /home/otus/.ssh
-              chown otus:otus -R /home/otus/.ssh    
-	      
-		echo 'polkit.addRule(function(action, subject) {' >> /etc/polkit-1/rules.d/10-udisk2.rules	          
-	      	echo 'if (action.id.match("org.freedesktop.udisks2.filesystem-mount-system") && subject.isInGroup("otus")) {' >> /etc/polkit-1/rules.d/10-udisk2.rules
-	      	echo 'return polkit.Result.YES;' >> /etc/polkit-1/rules.d/10-udisk2.rules	
-              	echo '}' >> /etc/polkit-1/rules.d/10-udisk2.rules
-	      	echo '});' >> /etc/polkit-1/rules.d/10-udisk2.rules
-		echo 'account required pam_time.so' >> /etc/pam.d/sshd
-		echo 'sshd;*;otus2;!Al0000-2400' >> /etc/security/time.conf
-		sed -i 's/.*\/usr\/libexec\/openssh\/sftp-server/#\0/' /etc/ssh/sshd_config
+ 	config.vm.define "centos" do |subconfig|    
+  		subconfig.vm.box = "centos/7"
+  		subconfig.vm.hostname="centos"    
+  		subconfig.vm.network :private_network, ip: "192.168.55.11"    
+  		subconfig.vm.provider "virtualbox" do |vb|      
+    			vb.memory = "256"      
+    			vb.cpus = "1"    
+    			unless File.exist?('./sata1.vdi')
+      				vb.customize ['createhd', '--filename', './sata1.vdi', '--size', 500 * 1024]
+    			end  
+    			vb.customize ["storagectl", :id, "--name", "SATA", "--add", "sata" ]
+    			vb.customize ['storageattach', :id, '--storagectl', 'SATA', '--port', 1, '--device', 0, '--type', 'hdd', '--medium',  './sata1.vdi']
+  		end
+  		$script0 = <<-'SCRIPT'
+    			useradd otus
+			useradd otus2
+			useradd otus3
+			cp -r /home/vagrant/.ssh /home/otus/.ssh
+			chown otus:otus -R /home/otus/.ssh    
+			#yum install -y udisks2 nano
+			#yum install -y udisks2 nano
+			yum install -y wget udisks2 nano
+  		SCRIPT
+
+		$script1 = <<-'SCRIPT'
+			cp /home/vagrant/10-udisk2.rules /etc/polkit-1/rules.d/10-udisk2.rules
+			cp /home/vagrant/99-udisk2_mount.rules /etc/polkit-1/rules.d/99-udisk2_mount.rules
+			cp /home/vagrant/99-networkmanager.rules /etc/polkit-1/rules.d/99-networkmanager.rules
+			
+			groupadd -r xgrp
+			gpasswd -a otus xgrp
+  		SCRIPT
+
+		$script2 = <<-'SCRIPT'
+			cp /home/vagrant/sshd_config /etc/ssh/sshd_config
+ 			sed -i '7a\account    required     pam_time.so' /etc/pam.d/sshd
+			echo 'sshd;*;otus2;!Al0000-2400' >> /etc/security/time.conf
+			systemctl restart sshd
+  		SCRIPT
+
+		$script3 = <<-'SCRIPT'
+			cd /home/vagrant
+			mkdir -p /var/jail/{dev,etc,lib,lib64,usr/bin,bin}
+			mknod -m 666 /var/jail/dev/null c 1 3
+			cp /etc/ld.so.{cache,conf} /var/jail/etc/
+			cp /etc/nsswitch.conf /var/jail/etc/
+			cp /etc/hosts /var/jail/etc/
+			for ii in ls bash; do cp $(which $ii) /var/jail$(which $ii); done
+			pushd /var/jail/bin/
+			ln -s bash sh
+			popd
+
+			# copy library dependencies for the binaries we just copied
+			# to find out what we need, 'ldd' can be used
+			# ex: ldd $(which bash)
+			#	linux-vdso.so.1 =>  (0x00007ffd4c735000)
+			#	libtinfo.so.5 => /lib/x86_64-linux-gnu/libtinfo.so.5 (0x00007fe0cce9c000)
+			#	libdl.so.2 => /lib/x86_64-linux-gnu/libdl.so.2 (0x00007fe0ccc98000)
+			#	libc.so.6 => /lib/x86_64-linux-gnu/libc.so.6 (0x00007fe0cc8d3000)
+			#	/lib64/ld-linux-x86-64.so.2 (0x00007fe0cd0c5000)
+
+			# to avoid manual copy, the l2chroot script can be used:
+			wget -O /usr/local/sbin/l2chroot http://www.cyberciti.biz/files/lighttpd/l2chroot.txt
+			chmod 744 /usr/local/sbin/l2chroot
+
+			# Edit l2chroot script and change the BASE="/webroot" variable to BASE="/var/jail"
+			sed -i 's@/webroot@/var/jail@' /usr/local/sbin/l2chroot
+
+			for ii in ls bash; do l2chroot $(which $ii); done
+			cp /lib64/libnsl.so.1 /var/jail/lib64/
+			cp /lib64/libnss_* /var/jail/lib64/
+
+			echo 'Match group sshjailed' >> /etc/ssh/sshd_config
+			echo '	ChrootDirectory /var/jail/' >> /etc/ssh/sshd_config
+			echo '	X11Forwarding no' >> /etc/ssh/sshd_config
+			echo '	AllowTcpForwarding no' >> /etc/ssh/sshd_config
+			systemctl restart sshd
+			groupadd sshjailed
+			gpasswd -a otus3 sshjailed
+			mkdir -p /var/jail/home/otus3
+			
+
+
+			#chmod +x chroot_conf.sh
+			#sh chroot_conf.sh
+  		SCRIPT
 		
-		echo 'Subsystem sftp internal-sftp -f AUTH -l VERBOSE' >> /etc/ssh/sshd_config
-		echo 'Match user otus3' >> /etc/ssh/sshd_config
-  		echo 'ChrootDirectory %h' >> /etc/ssh/sshd_config
-  		echo 'ForceCommand internal-sftp' >> /etc/ssh/sshd_config
-  		echo 'AllowTcpForwarding no' >> /etc/ssh/sshd_config
-		systemctl restart sshd
+  		subconfig.vm.provision "shell", inline: $script0
+  		config.vm.provision "file", source: "10-udisk2.rules", destination: "/home/vagrant/10-udisk2.rules"
+		config.vm.provision "file", source: "99-udisk2_mount.rules", destination: "/home/vagrant/99-udisk2_mount.rules"
+		config.vm.provision "file", source: "99-networkmanager.rules", destination: "/home/vagrant/99-networkmanager.rules"
+		subconfig.vm.provision "shell", inline: $script1
 
-		          
-          SHELL
- end
+		config.vm.provision "file", source: "sshd_config", destination: "/home/vagrant/sshd_config"
+		
+		subconfig.vm.provision "shell", inline: $script2
+		subconfig.vm.provision "shell", inline: $script3
+		
+	end
 
- config.vm.define "ubuntu" do |subconfig|
+config.vm.define "ubuntu" do |subconfig|
   subconfig.vm.box = "ubuntu/bionic64"
   subconfig.vm.hostname="ubuntu"
   subconfig.vm.network :private_network, ip: "192.168.55.12"
@@ -111,17 +171,7 @@ Vagrant.configure("2") do |config|
 	SHELL
 	
   end
-
-#config.vm.define "kali" do |subconfig|
-#  subconfig.vm.box = "offensive-security/kali-linux"
-#  config.vm.box_version = "2019.1.0"
-#  subconfig.vm.hostname="kali"
-#  subconfig.vm.network :private_network, ip: "192.168.55.13"
-#  subconfig.vm.provider "virtualbox" do |vb|
-#    vb.memory = "256"
-#    vb.cpus = "1"
-#  end
-# end
+		
 
 end
 
